--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Web Developer Profile</title>
 
     <link rel="stylesheet" href="../My Profile 2nd/Style.css">
 </head>
@@ -15,7 +15,7 @@
         
     </body>
     <Footer>
-        
+
     </Footer>
 </body>
 </html>
