--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Developer Profile</title>
 
-    <link rel="stylesheet" href="../My Profile 2nd/Style.css">
+  <!-- Header font style -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
+   
+  <!-- style sheet slink -->
+    <link rel="stylesheet" href="/style.css">
+
 </head>
 <body>
     <Header>
+        <nav>
+            <h3 class="nav-title">Rabb<span class="text-primary">i</span> Hossain</h3>
+            <ul>
+                <li><a href=""></a>Portfollio</li>
+                <li><a href="About"></a>Blog</li>
+                <li><button class="btn-primary">Hire me</button></li>
+            </ul>
+        </nav>
 
     </Header>
     <body>
