--- a/index.html
+++ b/index.html
@@ -15,16 +15,25 @@
 
 </head>
 <body>
-    <Header>
+    <Header class="header">
         <nav>
-            <h3 class="nav-title">Rabb<span class="text-primary">i</span> Hossain</h3>
+            <h3 class="nav-title">Rabb<span class="text-primary">i</span> </h3>
             <ul>
                 <li><a href=""></a>Portfollio</li>
                 <li><a href="About"></a>Blog</li>
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
-
+        <div class="banner">
+           <div> <h3 class="Banner-1st-line">Hi i am</h3>
+                <h1 class="banner-name">Rabbi Hossain</h1>
+                <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit qui minus, veniam expedita corrupti velit animi hic porro laboriosam repellat, inventore, impedit architecto quas explicabo a ab minima. Earum, nisi adipisci! Numquam consequuntur ex beatae.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact me</button>
+            </div>
+            <img class="profile-picture" src="images/hardy.png" alt="">
+        </div>
+        
     </Header>
     <body>
         
